--- a/ui/ReqDetail.ui
+++ b/ui/ReqDetail.ui
@@ -1,32 +1,33 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ReqDetail</class>
- <widget class="QDialog" name="ReqDetail" >
-  <property name="geometry" >
+ <widget class="QDialog" name="ReqDetail">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>441</width>
+    <width>459</width>
     <height>279</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
+   <property name="margin">
+    <number>9</number>
+   </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QLabel" name="TextLabel1" >
-       <property name="font" >
+      <widget class="QLabel" name="TextLabel1">
+       <property name="font">
         <font>
          <family>Arial</family>
          <pointsize>14</pointsize>
@@ -37,20 +38,20 @@
          <strikeout>false</strikeout>
         </font>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Details of the certificate signing request</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>20</height>
@@ -59,20 +60,20 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="image" >
-       <property name="minimumSize" >
+      <widget class="QLabel" name="image">
+       <property name="minimumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="scaledContents" >
+       <property name="scaledContents">
         <bool>true</bool>
        </property>
       </widget>
@@ -80,30 +81,30 @@
     </layout>
    </item>
    <item>
-    <widget class="QTabWidget" name="tabwidget" >
-     <property name="currentIndex" >
+    <widget class="QTabWidget" name="tabwidget">
+     <property name="currentIndex">
       <number>0</number>
      </property>
-     <widget class="QWidget" name="unnamed" >
-      <attribute name="title" >
+     <widget class="QWidget" name="unnamed">
+      <attribute name="title">
        <string>S&amp;tatus</string>
       </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="margin" >
-        <number>9</number>
-       </property>
-       <property name="spacing" >
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
+       </property>
+       <property name="margin">
+        <number>9</number>
        </property>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeType" >
+         <property name="sizeType">
           <enum>QSizePolicy::Expanding</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>20</height>
@@ -112,78 +113,78 @@
         </spacer>
        </item>
        <item>
-        <layout class="QGridLayout" >
-         <property name="margin" >
+        <layout class="QGridLayout">
+         <property name="margin">
           <number>0</number>
          </property>
-         <property name="spacing" >
+         <property name="spacing">
           <number>6</number>
          </property>
-         <item row="0" column="1" >
-          <widget class="QLineEdit" name="descr" >
-           <property name="toolTip" >
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="descr">
+           <property name="toolTip">
             <string>Internal name of the PKCS#10 signing request</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1" >
-          <widget class="QLabel" name="sigAlgo" >
-           <property name="frameShape" >
+         <item row="3" column="1">
+          <widget class="QLabel" name="sigAlgo">
+           <property name="frameShape">
             <enum>QFrame::WinPanel</enum>
            </property>
-           <property name="frameShadow" >
+           <property name="frameShadow">
             <enum>QFrame::Sunken</enum>
            </property>
-           <property name="text" >
+           <property name="text">
             <string/>
            </property>
           </widget>
          </item>
-         <item row="0" column="0" >
-          <widget class="QLabel" name="TextLabel2" >
-           <property name="text" >
+         <item row="0" column="0">
+          <widget class="QLabel" name="TextLabel2">
+           <property name="text">
             <string>Internal Name</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="0" >
-          <widget class="QLabel" name="TextLabel6" >
-           <property name="text" >
+         <item row="2" column="0">
+          <widget class="QLabel" name="TextLabel6">
+           <property name="text">
             <string>Private key</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="0" >
-          <widget class="QLabel" name="TextLabel1_2" >
-           <property name="text" >
+         <item row="3" column="0">
+          <widget class="QLabel" name="TextLabel1_2">
+           <property name="text">
             <string>Signature algorithm</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0" >
-          <widget class="QLabel" name="TextLabel4" >
-           <property name="text" >
+         <item row="1" column="0">
+          <widget class="QLabel" name="TextLabel4">
+           <property name="text">
             <string>Signature</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1" >
-          <widget class="ClickLabel" name="verify" />
+         <item row="1" column="1">
+          <widget class="ClickLabel" name="verify"/>
          </item>
-         <item row="2" column="1" >
-          <widget class="ClickLabel" name="privKey" />
+         <item row="2" column="1">
+          <widget class="ClickLabel" name="privKey"/>
          </item>
         </layout>
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeType" >
+         <property name="sizeType">
           <enum>QSizePolicy::Expanding</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>20</height>
@@ -193,52 +194,52 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab" >
-      <attribute name="title" >
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
        <string>&amp;Subject</string>
       </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="margin" >
-        <number>8</number>
-       </property>
-       <property name="spacing" >
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
        </property>
+       <property name="margin">
+        <number>8</number>
+       </property>
        <item>
-        <widget class="DistName" native="1" name="subject" />
+        <widget class="DistName" name="subject" native="true"/>
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2" >
-      <attribute name="title" >
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
        <string>Attributes</string>
       </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="margin" >
-        <number>9</number>
-       </property>
-       <property name="spacing" >
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
        </property>
+       <property name="margin">
+        <number>9</number>
+       </property>
        <item>
-        <widget class="QWidget" native="1" name="attributes" />
+        <widget class="QWidget" name="attributes" native="true"/>
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_1" >
-      <attribute name="title" >
+     <widget class="QWidget" name="tab_1">
+      <attribute name="title">
        <string>&amp;Extensions</string>
       </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="margin" >
-        <number>8</number>
-       </property>
-       <property name="spacing" >
+      <layout class="QVBoxLayout">
+       <property name="spacing">
         <number>6</number>
        </property>
+       <property name="margin">
+        <number>8</number>
+       </property>
        <item>
-        <widget class="QTextEdit" name="v3extensions" >
-         <property name="readOnly" >
+        <widget class="QTextEdit" name="v3extensions">
+         <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
@@ -248,22 +249,22 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
      </property>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>141</width>
          <height>29</height>
@@ -272,26 +273,18 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="but_ok" >
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>3</hsizetype>
-         <vsizetype>0</vsizetype>
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text" >
+      <widget class="QPushButton" name="but_ok">
+       <property name="text">
         <string>&amp;OK</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -305,15 +298,15 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>ClickLabel</class>
+   <extends>QLabel</extends>
+   <header>widgets/clicklabel.h</header>
+  </customwidget>
+  <customwidget>
    <class>DistName</class>
    <extends>QWidget</extends>
    <header>widgets/distname.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ClickLabel</class>
-   <extends>QLabel</extends>
-   <header>widgets/clicklabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
@@ -324,11 +317,11 @@
    <receiver>ReqDetail</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>291</x>
      <y>347</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>73</x>
      <y>318</y>
     </hint>
