allow certificates to be written to any token
 - consolidate token-select dialog

 - update changelog

--- a/ui/SelectToken.ui
+++ b/ui/SelectToken.ui
@@ -143,7 +143,7 @@
      <item>
       <widget class="QPushButton" name="applyButton">
        <property name="text">
-        <string>&amp;Store</string>
+        <string>&amp;Select</string>
        </property>
       </widget>
      </item>
